test/scc_test/stmt/semantic-errors/015.a
015.t:6:5: error: redefinition of 'label'